welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:7: error: not found: value in
  if ((outsideMode)&&(in)) {
                      ^in1To10:9: error: not found: value in
  } else if ((outsideMode)&&(in==false)) {
                             ^in1To10:11: error: not found: value in
  } else if ((outsideMode==false)&&(in==false)) {
                                    ^